fix(implementing-project):  margin collapsing

--- a/css/implementing-project.css
+++ b/css/implementing-project.css
@@ -10,7 +10,6 @@
 
 .content-block__content {
     font-size: 1.125em;
-    line-height: 24px;
 }
 
 .content-block__header {
